イベントページのエラー修正と改善
🔴 最優先修正:
- showCreateEventModal未定義エラー修正（暫定処理実装）
- Supabase初期化順序を修正（profile-syncより前に読み込み）
- waitForSupabase関数の重複定義を解決

🟠 高優先修正:
- window.supabase → window.supabaseClient に統一
- inline onclickのXSS脆弱性を修正（addEventListener方式に変更）
- イベントリスナーの正常動作確認

🟡 中優先修正:
- Google Calendar APIキーを環境変数対応
- formatDate/formatTime関数を使用前に定義
- モーダルのメモリリーク対策（クリーンアップ処理、ESCキー対応）

修正ファイル:
- js/calendar-integration.js
- js/event-modal.js
- events.html

ボタンクリック無反応の問題を解決

--- a/events.html
+++ b/events.html
@@ -458,15 +458,13 @@
     <!-- 関数実行トラッカー -->
     <script src="js/function-execution-tracker.js"></script>
     <!-- Supabase統一初期化（最初に読み込む） -->
-    <!-- 統一通知システム -->
-    <script src="js/notification-system-unified.js"></script>
-    <script src="js/supabase-unified.js?v=1.0"></script>
-    <!-- Supabase参照修正（不要になったため無効化） -->
-    <!-- <script src="js/supabase-wait-fix.js"></script> -->
-    <!-- Core initialization (must be first) -->
+    <script src="js/supabase-unified.js?v=1.1"></script>
+    <!-- Core initialization -->
     <script src="js/interconnect-core.js"></script>
     <!-- 統一トースト通知 (must be loaded early) -->
     <script src="js/toast-unified.js"></script>
+    <!-- 統一通知システム -->
+    <script src="js/notification-system-unified.js"></script>
     
     <script src="js/error-prevention.js"></script>
     <script src="js/null-check-fixes.js"></script>
@@ -474,6 +472,7 @@
     <script src="js/safe-storage.js"></script>
     <!-- <script src="js/debug-logger.js"></script> -->
     <script src="js/global-functions.js"></script>
+    <!-- profile-syncはSupabase初期化後に読み込む -->
     <script src="js/profile-sync.js"></script>
     <script src="js/notifications-realtime-unified.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
